dicription&button complite

--- a/netflix.html
+++ b/netflix.html
@@ -18,6 +18,19 @@
             <div><p>MY LIST</p></div>
          </div>
     </div>
-    <div class="photoBox"></div>
+    <div class="photoBox">
+      <div class="contents">
+         <div class="details">
+            <p><b>Duration:51 min...</b></p><br>
+            <h2>The Walking Dead</h2><br>
+            <p>Sheriff Deputy Rick Grimes wakes up from a coma to learn the world is in ruins and must lead a group of survivors to stay alive.</p>
+         </div>
+         <div class="button">
+            <button class="watch">WATCH</button>
+            <button class="addList">ADD LIST</button>
+         </div>
+      </div>
+      <img src="/pictures/484382.jpg" alt="image">
+    </div>
 </body>
 </html>
