--- a/netflix.html
+++ b/netflix.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:  rgb(26, 25, 25)">
   <div class="navBar">
          <div class="navLogo">
             <img src="/pngwing.com.png" alt="">
@@ -31,6 +31,25 @@
          </div>
       </div>
       <img src="/pictures/484382.jpg" alt="image">
+    </div>
+    <div class="thirdBox">
+      <div class="trends"> 
+         <span><b>Trends Now</b></span>
+         <p>Popular</p>
+         <p>Premiers</p>
+         <p>Recently Added</p>
+      </div>
+
+      <div class="categories">
+         <button class="watch1">Action</button>
+         <button class="addList">Adventure</button>
+         <button class="addList">Animation</button>
+         <button class="watch1">Biography</button>
+         <button class="addList">Crime</button>
+         <button class="addList">Commedy</button>
+         <button class="addList">Documentery</button>
+         <button class="watch1">Drama</button>
+      </div>
     </div>
 </body>
 </html>
