--- a/netflix.html
+++ b/netflix.html
@@ -6,10 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:  rgb(26, 25, 25)">
+<body style="background-color: blue;">
   <div class="navBar">
          <div class="navLogo">
-            <img src="/pngwing.com.png" alt="">
+            <img src="/projects/pictures/pngwing.com.png" alt="">
          </div>
          <div class="navOptions">
             <div><p>HOME</p></div>
@@ -30,7 +30,7 @@
             <button class="addList">ADD LIST</button>
          </div>
       </div>
-      <img src="/pictures/484382.jpg" alt="image">
+      <img src="/projects/pictures/484382.jpg" alt="image">
     </div>
     <div class="thirdBox">
       <div class="trends"> 
@@ -50,6 +50,80 @@
          <button class="addList">Documentery</button>
          <button class="watch1">Drama</button>
       </div>
+    </div>
+    <div class="last">
+      <div class="suggections">
+         <img src="/projects/pictures/dc.jpg" alt="image">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/avengers.jfif" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/saw.jpg" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/dhoom.jfif" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/hills.jpg" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/sb.jfif" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/hills.jpg" alt="img">
+      </div>
+      <div class="suggections">
+         <img src="/projects/pictures/sb.jfif" alt="img">
+         
+      </div>
+   </div>
+      <div class="last">
+         <div class="suggections">
+            <img src="/projects/pictures/dc.jpg" alt="image">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/avengers.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/saw.jpg" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/dhoom.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/hills.jpg" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/sb.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/hills.jpg" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/sb.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/hills.jpg" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/sb.jfif" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/hills.jpg" alt="img">
+         </div>
+         <div class="suggections">
+            <img src="/projects/pictures/sb.jfif" alt="img">
+         </div>
     </div>
 </body>
 </html>
