--- a/netflix.html
+++ b/netflix.html
@@ -30,7 +30,7 @@
             <button class="addList">ADD LIST</button>
          </div>
       </div>
-      <img src="/projects/pictures/484382.jpg" alt="image">
+      <img src="projects/pictures/484382.jpg" alt="image">
     </div>
     <div class="thirdBox">
       <div class="trends"> 
@@ -53,76 +53,76 @@
     </div>
     <div class="last">
       <div class="suggections">
-         <img src="/projects/pictures/dc.jpg" alt="image">
+         <img src="projects/pictures/dc.jpg" alt="image">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/avengers.jfif" alt="img">
+         <img src="projects/pictures/avengers.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/saw.jpg" alt="img">
+         <img src="projects/pictures/saw.jpg" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/dhoom.jfif" alt="img">
+         <img src="projects/pictures/dhoom.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+         <img src="projects/pictures/kumbalangi.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/hills.jpg" alt="img">
+         <img src="projects/pictures/hills.jpg" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/sb.jfif" alt="img">
+         <img src="projects/pictures/sb.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+         <img src="projects/pictures/kumbalangi.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/hills.jpg" alt="img">
+         <img src="projects/pictures/hills.jpg" alt="img">
       </div>
       <div class="suggections">
-         <img src="/projects/pictures/sb.jfif" alt="img">
+         <img src="projects/pictures/sb.jfif" alt="img">
          
       </div>
    </div>
       <div class="last">
          <div class="suggections">
-            <img src="/projects/pictures/dc.jpg" alt="image">
+            <img src="projects/pictures/dc.jpg" alt="image">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/avengers.jfif" alt="img">
+            <img src="projects/pictures/avengers.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/saw.jpg" alt="img">
+            <img src=/projects/pictures/saw.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/dhoom.jfif" alt="img">
+            <img src="projects/pictures/dhoom.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/kumbalangi.jfif" alt="img">
+            <img src="projects/pictures/kumbalangi.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/hills.jpg" alt="img">
+            <img src="projects/pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/sb.jfif" alt="img">
+            <img src="projects/pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/hills.jpg" alt="img">
+            <img src="projects/pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/sb.jfif" alt="img">
+            <img src="projects/pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/hills.jpg" alt="img">
+            <img src="projects/pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/sb.jfif" alt="img">
+            <img src="projects/pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/hills.jpg" alt="img">
+            <img src="projects/pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="/projects/pictures/sb.jfif" alt="img">
+            <img src="projects/pictures/sb.jfif" alt="img">
          </div>
     </div>
 </body>
