--- a/netflix.html
+++ b/netflix.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: blue;">
+<body style="background-color: rgb(0, 0, 0);">
   <div class="navBar">
          <div class="navLogo">
             <img src="/projects/pictures/pngwing.com.png" alt="">
