--- a/netflix.html
+++ b/netflix.html
@@ -9,7 +9,7 @@
 <body style="background-color: rgb(0, 0, 0);">
   <div class="navBar">
          <div class="navLogo">
-            <img src="/projects/pictures/pngwing.com.png" alt="">
+            <img src="projects pictures/pngwing.com.png" alt="">
          </div>
          <div class="navOptions">
             <div><p>HOME</p></div>
