--- a/netflix.html
+++ b/netflix.html
@@ -9,7 +9,7 @@
 <body style="background-color: rgb(0, 0, 0);">
   <div class="navBar">
          <div class="navLogo">
-            <img src="projects pictures/pngwing.com.png" alt="">
+            <img src="pictures/pngwing.com.png" alt="img">
          </div>
          <div class="navOptions">
             <div><p>HOME</p></div>
@@ -30,7 +30,7 @@
             <button class="addList">ADD LIST</button>
          </div>
       </div>
-      <img src="projects/pictures/484382.jpg" alt="image">
+      <img src="pictures/484382.jpg" alt="image">
     </div>
     <div class="thirdBox">
       <div class="trends"> 
@@ -53,31 +53,31 @@
     </div>
     <div class="last">
       <div class="suggections">
-         <img src="projects/pictures/dc.jpg" alt="image">
+         <img src="pictures/dc.jpg" alt="image">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/avengers.jfif" alt="img">
+         <img src="pictures/avengers.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/saw.jpg" alt="img">
+         <img src="pictures/saw.jpg" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/dhoom.jfif" alt="img">
+         <img src="pictures/dhoom.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/kumbalangi.jfif" alt="img">
+         <img src="pictures/kumbalangi.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/hills.jpg" alt="img">
+         <img src="pictures/hills.jpg" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/sb.jfif" alt="img">
+         <img src="pictures/sb.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/kumbalangi.jfif" alt="img">
+         <img src="pictures/kumbalangi.jfif" alt="img">
       </div>
       <div class="suggections">
-         <img src="projects/pictures/hills.jpg" alt="img">
+         <img src="pictures/hills.jpg" alt="img">
       </div>
       <div class="suggections">
          <img src="projects/pictures/sb.jfif" alt="img">
@@ -86,43 +86,43 @@
    </div>
       <div class="last">
          <div class="suggections">
-            <img src="projects/pictures/dc.jpg" alt="image">
+            <img src="pictures/dc.jpg" alt="image">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/avengers.jfif" alt="img">
+            <img src="pictures/avengers.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src=/projects/pictures/saw.jpg" alt="img">
+            <img src=pictures/saw.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/dhoom.jfif" alt="img">
+            <img src=pictures/dhoom.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/kumbalangi.jfif" alt="img">
+            <img src="pictures/kumbalangi.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/hills.jpg" alt="img">
+            <img src="pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/sb.jfif" alt="img">
+            <img src="pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/hills.jpg" alt="img">
+            <img src="pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/sb.jfif" alt="img">
+            <img src="pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/hills.jpg" alt="img">
+            <img src="pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/sb.jfif" alt="img">
+            <img src="pictures/sb.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/hills.jpg" alt="img">
+            <img src="pictures/hills.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src="projects/pictures/sb.jfif" alt="img">
+            <img src="pictures/sb.jfif" alt="img">
          </div>
     </div>
 </body>
