--- a/netflix.html
+++ b/netflix.html
@@ -92,10 +92,10 @@
             <img src="pictures/avengers.jfif" alt="img">
          </div>
          <div class="suggections">
-            <img src=pictures/saw.jpg" alt="img">
+            <img src="pictures/saw.jpg" alt="img">
          </div>
          <div class="suggections">
-            <img src=pictures/dhoom.jfif" alt="img">
+            <img src="pictures/dhoom.jfif" alt="img">
          </div>
          <div class="suggections">
             <img src="pictures/kumbalangi.jfif" alt="img">
