--- a/netflix.html
+++ b/netflix.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body style="background-color: rgb(0, 0, 0);">
+<body >
   <div class="navBar">
          <div class="navLogo">
             <img src="pictures/pngwing.com.png" alt="img">
@@ -34,7 +35,8 @@
     </div>
     <div class="thirdBox">
       <div class="trends"> 
-         <span><b>Trends Now</b></span>
+         <span class="icon"><i class="fas fa-chart-line"></i> 
+            <b>Trends Now</b></span>
          <p>Popular</p>
          <p>Premiers</p>
          <p>Recently Added</p>
@@ -49,6 +51,8 @@
          <button class="addList">Commedy</button>
          <button class="addList">Documentery</button>
          <button class="watch1">Drama</button>
+         <button class="watch1">Anime</button>
+         <button class="addList">Thriller </button>
       </div>
     </div>
     <div class="last">
