--- a/netflix.html
+++ b/netflix.html
@@ -23,12 +23,12 @@
       <div class="contents">
          <div class="details">
             <p><b>Duration:51 min...</b></p><br>
-            <h2>The Walking Dead</h2><br>
+            <h2>The Walking Dead</h2>
             <p>Sheriff Deputy Rick Grimes wakes up from a coma to learn the world is in ruins and must lead a group of survivors to stay alive.</p>
          </div>
          <div class="button">
             <button class="watch">WATCH</button>
-            <button class="addList">ADD LIST</button>
+            <button class="addList"><i class="fas fa-list-ul"></i> ADD LIST</button>
          </div>
       </div>
       <img src="pictures/484382.jpg" alt="image">
